--- a/app/views/articles/new.html.slim
+++ b/app/views/articles/new.html.slim
@@ -1,2 +1,11 @@
-h1 Articles#new
-p Find me in app/views/articles/new.html.slim
+h1 記事投稿ページ
+=link_to '投稿一覧', articles_path
+= form_with model: @article, local: true do |f|
+  .form-group
+    = f.label :title, 'タイトル'
+    = f.text_field :title, class: 'form-control'
+    = f.label :text, '本文'
+    = f.text_area :text, class: 'form-control', size: '20x5'
+  = f.submit '投稿する', class: 'btn btn-secondary'
+    
+
