--- a/app/views/articles/edit.html.slim
+++ b/app/views/articles/edit.html.slim
@@ -1,2 +1,6 @@
-h1 Articles#edit
-p Find me in app/views/articles/edit.html.slim
+h1 投稿の編集
+
+.nav.justify-content-end
+  = link_to '投稿一覧', articles_path, class: 'nav-link'
+
+= render partial: 'form', locals: {article: @article}
