--- a/app/views/articles/new.html.slim
+++ b/app/views/articles/new.html.slim
@@ -1,11 +1,7 @@
 h1 記事投稿ページ
 =link_to '投稿一覧', articles_path
-= form_with model: @article, local: true do |f|
-  .form-group
-    = f.label :title, 'タイトル'
-    = f.text_field :title, class: 'form-control'
-    = f.label :text, '本文'
-    = f.text_area :text, class: 'form-control', size: '20x5'
-  = f.submit '投稿する', class: 'btn btn-secondary'
+
+= render partial: 'form', locals: {article: @article}
+
     
 
