--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -12,10 +12,10 @@ html
       .navbar-brand Blog
 
       ul.navbar-nav.ml-auto
-        - if @current_user
-          li.nav-item= link_to 'ログアウト', logout_path, method: :delete, class: 'nav-link'
+        - if current_user
+          li.nav-item= link_to 'ログアウト', logout_path, method: :delete, class: 'btn btn-danger'
         - else
-          li.nav-item= link_to 'ログイン', login_path, class: 'nav-link'
+          li.nav-item= link_to 'ログイン', login_path, class: 'btn btn-primary'
     .container
       - if flash.notice.present?
         .alert.alert-success = flash.notice
