--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -13,10 +13,11 @@ html
 
       ul.navbar-nav.ml-auto
         - if current_user
-          li.nav-item= link_to 'ログアウト', logout_path, method: :delete, class: 'btn btn-danger'
-        - else
-          li.nav-item= link_to 'ログイン', login_path, class: 'btn btn-primary'
+          li.nav-item= link_to 'ログアウト', logout_path, method: :delete
+          li.nav-item= link_to 'ログイン', login_path
+          li.nav-item= link_to 'Sign Up', signup_path
     .container
       - if flash.notice.present?
         .alert.alert-success = flash.notice
+    br
   = yield
