--- a/app/views/articles/_form.html.slim
+++ b/app/views/articles/_form.html.slim
@@ -1,4 +1,8 @@
-
+- if article.errors.present?
+  div#error_explanation.alert.alert-danger 
+    ul
+      - article.errors.full_messages.each do |message|
+        li = message
 
 = form_with model: article, local: true do |f|
   .form-group
