--- a/app/views/articles/show.html.slim
+++ b/app/views/articles/show.html.slim
@@ -10,9 +10,21 @@ table.table.table-hover
       th= Article.human_attribute_name :created_at
       td= @article.created_at
     tr
+      th= User.human_attribute_name :name
+      td= @article.user.name
+    tr
+      th= Article.human_attribute_name :id
+      td= @article.id
+
+    tr
       th
       td
-        = link_to '編集', edit_article_path(@article), class: 'btn btn-primary mr-3'
-        = link_to '削除', @article, method: :delete, class: 'btn btn-danger'
+        - if @article.user_id == current_user.id
+            = link_to '編集', edit_article_path(@article), class: 'btn btn-primary'
+            
+            = link_to '削除', @article, method: :delete, class: 'btn btn-danger'
+
+        
+
 
 
