--- a/app/views/users/index.html.slim
+++ b/app/views/users/index.html.slim
@@ -1,3 +1,19 @@
-h1 index
-= link_to 'ユーザー登録', signup_path, class: 'btn btn-primary'
+h1 ユーザー一覧
+= link_to '新規投稿', new_article_path
+br
+= link_to '投稿一覧', articles_path 
+
+.mb-3
+table.table.table-hover
+  thead.thead-default
+    tr
+      th= User.human_attribute_name :name
+      th= User.human_attribute_name :age
+    tbody    
+    - @users.each do |user|
+      tr
+        td= link_to user.name, user
+        td= user.age
+
+
 
