add text to article's show view

--- a/app/views/articles/show.html.slim
+++ b/app/views/articles/show.html.slim
@@ -13,8 +13,8 @@ table.table.table-hover
       th= User.human_attribute_name :name
       td= @article.user.name
     tr
-      th= Article.human_attribute_name :id
-      td= @article.id
+      th= Article.human_attribute_name :text
+      td= @article.text
 
     tr
       th
